feat: api updates and client refactored to use uploader
